Ensure that footer is aligned to the bottom.

--- a/src/assets/stylesheets/App.scss
+++ b/src/assets/stylesheets/App.scss
@@ -66,7 +66,7 @@ button {
   background-color: var(--content-bg-color);
   color: var(--content-bg-color-contrast);
   position: relative;
-  overflow: scroll;
+  overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
 
   & > * {
